src/test/deca/syntax/invalid/LE/AttSansVirgule.deca
//test invalide
//declaration plusieurs attributs sans mettre de virgule

class c1 {
    int a , b c ;
}